[html] Blank cobol lines was duplicated, and CSS not compatible with Chrome.

--- a/src/CobolSharp/templates/source.css
+++ b/src/CobolSharp/templates/source.css
@@ -54,7 +54,7 @@ div.code {
 
 div.code a {
     color: black;
-    text-decoration-line: none;
+    text-decoration: none;
 }
 
 div.unused div.code a {
