--- a/src/CobolSharp/templates/main.html
+++ b/src/CobolSharp/templates/main.html
@@ -29,7 +29,22 @@
   <div id="output">
     <div class="source">
       {% for line in output_lines -%}
-
+      {%- if line.xref_stmts %}
+      <div class="line">
+        <div class="lineno"></div>
+        <div class="code">
+          {%- for i in range(line.indent) %}<span class="indent indent{{ i % 8 }}"></span>    {% endfor -%}
+            <span class="comment">{{ comment_prefix }} References:</span></div>
+      </div>
+      {% for stmt in line.xref_stmts|sort -%}
+      <div class="line">
+        <div class="lineno"></div>
+        <div class="code"><a href="#cobol.{{ stmt.source.from_line }}">
+            {%- for i in range(line.indent) %}<span class="indent indent{{ i % 8 }}"></span>    {% endfor -%}
+            <span class="comment">{{ comment_prefix }} {{ '{:6d}'.format(stmt.source.from_line) }}: {{ stmt.sentence.para.section.name |e }}</span></a></div>
+      </div>
+      {% endfor -%}
+      {%- endif -%}
       <div id="output.{{ line.number }}" class="line">
         {%- if line.href_output -%}
           <a class="link-def" href="#{{line.href_output}}" aria-label="Go to definition"><span class="octicon octicon-tag" aria-hidden=true></span></a>
